--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#F4CD8B</color>
+    <color name="colorPrimaryDark">#E7A365</color>
+    <color name="colorAccent">#89AFD0</color>
+    <color name="white">#ffffff</color>
 </resources>
