--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
+                    android:layout_marginTop="12dp"
                     android:textColor="@color/white"
                     android:textSize="22sp"
                     tools:ignore="MissingPrefix" />
@@ -100,7 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         android:elevation="7dp"
-        android:src="@drawable/ic_my_location"
+        android:src="@drawable/ic_refresh"
         app:backgroundTint="@color/colorAccent"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end" />
